--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,17 @@
 {
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "./dist",
-
-    "module": "nodenext",
     "target": "ES2020",
-    "moduleResolution": "nodenext",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-
-    "types": ["node", "jest"],
-
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-
     "strict": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
     "skipLibCheck": true,
-
-    "isolatedModules": false,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force"
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "resolveJsonModule": true,
+    "declaration": true,
+    "isolatedModules": true
   },
-  "include": ["src", "tests", "**/*.test.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "tests"]
 }
